side nav color scheme

--- a/EmployeeSkillManagement/Views/Shared/_Layout.cshtml
+++ b/EmployeeSkillManagement/Views/Shared/_Layout.cshtml
@@ -24,11 +24,11 @@
 <body>
     <div class="super-contianer d-sm-flex">
         @if(User.Identity!.IsAuthenticated){
-        <header class="side-navbar-header col-sm-3 bg-gradient mb-4 mb-sm-0">
+        <header class="side-navbar-header col-sm-3 bg-gradient mb-4 mb-sm-0 border-end">
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark">
                 <div class="container-fluid flex-sm-column p-0">
                     <a class="text-center mt-sm-4 mb-sm-4 text-light logo" style="text-decoration:none"asp-area="" asp-controller="Home" asp-action="Index">
-                        <img src="~/Content/Images/cg-logo.png">
+                        <img src="~/Content/Images/capgemini-logo.png">
                         @* <div>Employee <br>Skill Management</div> *@
                         </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
