--- a/EmployeeSkillManagement/Views/Account/Login.cshtml
+++ b/EmployeeSkillManagement/Views/Account/Login.cshtml
@@ -1,6 +1,14 @@
 @model EmployeeSkillManagement.Models.ViewModels.LoginViewModel
 <div class="login-card">
-    <h4>Admin Login</h4>
+    <div class="left">
+        <img src="@Url.Content("~/Content/Images/capgemini-logo.png")" alt="capgemini">
+        <div class="logo-text">
+            Get the <span>future</span> you want
+        </div>
+    </div>
+    <div class="right">
+
+    @* <h4 class="text-uppercase text-center">Admin Login</h4> *@
     <form asp-action="Login" asp-controller="Account" method="post">
         <input type="hidden" name="returnUrl" value="@Context.Request.Query["ReturnUrl"]" />
         <div class="form-group">
@@ -13,8 +21,10 @@
             <input asp-for="Password" type="password" class="form-control" />
             <small><span asp-validation-for="Password" class="text-danger"></span></small>
         </div>
-        <button type="submit" class="btn btn-primary">Login</button>
+        <button type="submit" class="btn btn-primary w-100">Login</button>
     </form>
+    </div>
+
 </div>
 
 @section Scripts{
