--- a/EmployeeSkillManagement/Views/Account/Login.cshtml
+++ b/EmployeeSkillManagement/Views/Account/Login.cshtml
@@ -1,5 +1,5 @@
 @model EmployeeSkillManagement.Models.ViewModels.LoginViewModel
-<div class="login-card">
+<div class="login-card p-5 bg-white rounded border shadow-sm">
     <div class="left">
         <img src="@Url.Content("~/Content/Images/capgemini-logo.png")" alt="capgemini">
         <div class="logo-text">
