--- a/EmployeeSkillManagement/Views/Employee/GenerateReport.cshtml
+++ b/EmployeeSkillManagement/Views/Employee/GenerateReport.cshtml
@@ -1,13 +1,14 @@
 @model EmployeeSkillManagement.Models.ViewModels.EmployeeReportViewModel
    
 <div class="p-2">
-    <h4>Employees Report</h4>
+    <h4 class="text-uppercase">Employees Report</h4>
 </div>
 
-<div id="result" class="mt-4 bg-white p-2 border rounded">
+<div id="result" class="mt-2 bg-white p-2 border rounded">
     <table id="generatedReport" class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
+                <th>SN</th>
                 <th>Name</th>
                 <th>Email</th>
                 <th>Designation</th>
@@ -23,11 +24,13 @@
         <tbody>
             <!-- Your data goes here -->
             @if(Model.Employees != null){
+                int index = 1;
                 @foreach(var employee in Model.Employees){
                     <tr>
+                        <td>@index</td>
                         <td>@employee.FirstName @employee.LastName</td>
                         <td>@employee.Email</td>
-                        <td>@employee.Designation.DesignationName</td>
+                        <td>@employee.Designation!.DesignationName</td>
                         <td>@employee.DateOfJoining</td>
                         @if(Model.PrimarySkill!=""){
                             <td>@Model.PrimarySkill</td>
@@ -37,7 +40,7 @@
                                 @skills.SkillName
                                 @if (skills != employee.EmployeeSkillsAndLevels.Last())
                                 {
-                                    @:,
+                                    <text>, </text>
                                 }
                                 
                             }
@@ -45,7 +48,9 @@
                         
 
                     </tr>
+                    index++;
                 }
+
             }
             
         </tbody>
