--- a/EmployeeSkillManagement/Views/Employee/Index.cshtml
+++ b/EmployeeSkillManagement/Views/Employee/Index.cshtml
@@ -3,9 +3,11 @@
     ViewData["Title"] = "Manage Employees";
 }
 <div class="d-flex align-items-center justify-content-between pe-sm-2">
-    <h5 class="p-2 col-6 text-center text-lg-start m-0 text-uppercase">Manage Employee</h5>
+    <h5 class="p-2 col-6 text-center text-lg-start m-0 text-uppercase">
+        <i class="bi bi-kanban me-2"></i>Manage Employees</h5>
     <div class="col-6 col-lg-4 col-xl-3 text-center text-lg-end">
-        <a asp-controller="Skill" asp-action="Create" class="btn btn-primary bg-gradient w-100">Create New Employee</a>
+        <a asp-controller="Employee" asp-action="Create" class="btn btn-primary bg-gradient w-100">
+            <i class="bi bi-person-plus-fill me-2"></i>Create Employee</a>
     </div>
 </div>
 <div class="p-2">
@@ -30,7 +32,8 @@
         </div>
         <div class="col-12 col-md-3 mt-2 mb-2">
             <input hidden name="generateReport" value="true" />
-            <button type="submit" class="btn btn-success bg-gradient w-100">Generate Report</button>
+            <button type="submit" class="btn btn-success bg-gradient w-100 generate-report">
+                <i class="bi bi-table me-2"></i>Generate Report</button>
         </div>
     </form>
     <div id="spinner-container" class="d-flex justify-content-center d-none">
