--- a/EmployeeSkillManagement/Views/Skill/_DeleteSkillModal.cshtml
+++ b/EmployeeSkillManagement/Views/Skill/_DeleteSkillModal.cshtml
@@ -1,16 +1,16 @@
-@model Employee
+@model Skill
 <div class="modal fade" id="delete-modal-@Model.Id" tabindex="-1" aria-labelledby="delete-modal-@Model.Id-label" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title text-uppercase" id="delete-modal-@Model.Id-label">Delete Employee</h5>
+        <h5 class="modal-title text-uppercase" id="delete-modal-@Model.Id-label">Delete Skill</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Are you sure you want to delete this employee data?
+        Are you sure you want to delete this skill?
       </div>
       <div class="modal-footer">
-        <form asp-controller="Employee" asp-action="Delete" method="post" class="w-75 text-end">
+        <form asp-controller="Skill" asp-action="Delete" method="post" class="w-75 text-end">
             <input type="hidden" asp-for="Id" value="@Model.Id" />
             <button type="button" class="btn bg-light bg-gradient col-5" data-bs-dismiss="modal">
               <i class="bi bi-x me-2"></i>Cancel</button>
