--- a/EmployeeSkillManagement/Views/Employee/_EmployeeCard.cshtml
+++ b/EmployeeSkillManagement/Views/Employee/_EmployeeCard.cshtml
@@ -2,7 +2,7 @@
 
 @foreach(var employee in Model){
 
-<div class="d-sm-flex p-3 mb-2 border rounded bg-white justify-content-around flex-wrap">
+<div class="d-sm-flex p-3 mb-2 shadow-sm border rounded bg-white justify-content-around flex-wrap">
     <div class="col-sm-4 mb-4 mb-lg-0">
         <h6 class="text-primary fw-bold m-0 text-capitalize">
             <i class="bi bi-person-vcard me-1"></i>@employee.FirstName @employee.LastName</h6>
