--- a/EmployeeSkillManagement/Views/Skill/Create.cshtml
+++ b/EmployeeSkillManagement/Views/Skill/Create.cshtml
@@ -9,7 +9,7 @@
     <form method="post" class="row align-items-end">
         <div class="form-group col-sm-5 ">
             <label asp-for="SkillName"></label>
-            <input asp-for="SkillName" class="form-control" placeholder="Enter Skill Name ">
+            <input asp-for="SkillName" class="form-control" placeholder="Enter Skill">
         </div>
         <div class="col-sm-3 ">
             <button type="submit" class="btn btn-primary  bg-gradient w-100">
