Improving controller code

--- a/EmployeeSkillManagement/Views/Home/Index.cshtml
+++ b/EmployeeSkillManagement/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
          @System.Text.Json.JsonSerializer.Serialize(Model, new System.Text.Json.JsonSerializerOptions { WriteIndented = true })
     </pre>  *@
     <div class="mb-5">
-        <h4>Explore seamless employee management tool. Effortlessly view, create, and delete employees, add or remove skills, and even generate detailed reports. Utilize powerful search capabilities to find employees by name, employee id or skill.</h4>
+        <h5>Explore seamless employee management tool. Effortlessly view, create, and delete employees, add or remove skills, and even generate detailed reports. Utilize powerful search capabilities to find employees by name, employee id or skill.</h5>
     </div>
     <div class="d-flex gap-3 mb-4">
         <div class="col-sm-4 col-6">
@@ -26,8 +26,7 @@
     <div class="d-flex flex-column flex-sm-row justify-content-center align-items-center">
         <div class="left-content col-sm-6">
             <h6>Skills Pie Chart</h6>
-            <h4>Illustrating the distribution of skills alongside the corresponding number of employees.
-        </h4></div>
+            <h5>Illustrating the distribution of skills alongside the corresponding number of employees.</h5></div>
         <div class="col-sm-6 col-12 chart-container">
             <canvas id="skillPieChart" ></canvas>
         </div>
