--- a/EmployeeSkillManagement/wwwroot/css/site.css
+++ b/EmployeeSkillManagement/wwwroot/css/site.css
@@ -168,8 +168,14 @@ li.nav-item .nav-link{
   font-weight: 500;
   text-transform: uppercase;
   border-radius: 4px;
+  text-align: left;
 
 }
+
+.half-hide li.nav-item .nav-link{
+  text-align: center;
+}
+
 li.nav-item .nav-link:hover, li.nav-item .nav-link.active{
   color: #fff!important;
   background: #0070AD;
