--- a/EmployeeSkillManagement/Views/Employee/GenerateReport.cshtml
+++ b/EmployeeSkillManagement/Views/Employee/GenerateReport.cshtml
@@ -5,6 +5,8 @@
 </div>
 
 <div id="result" class="mt-2 bg-white p-2 border rounded">
+    <div><h6>Export desired format</h6></div>
+
     <table id="generatedReport" class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
